fixing issue with book routes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,9 @@
     <li>
       find All Users:- get API-  <b>http://localhost:3000/users</b> 
     </li>
+    <li>
+      find user:- get API-  <b>http://localhost:3000/users/id</b> 
+    </li>
 </ul>
 
 <hr />
