--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,9 @@
     <li>
       find user:- get API-  <b>http://localhost:3000/users/id</b> 
     </li>
+     <li>
+      add user:- post API-  <b>http://localhost:3000/users</b> 
+    </li>
 </ul>
 
 <hr />
