--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,6 +3,17 @@
 
 <p>Api End Points</p>
 <hr />
+<h2>admin</h2>
+<ul>
+   <li>
+      admin register:- post API-  <b>http://localhost:3000//admin/register
+</b> 
+    </li>
+    <li>
+      admin login:- post API-  <b>http://localhost:3000//admin/login
+</b> 
+    </li>
+</ul>
 <h2>Users</h2>
 <ul>
     <li>
@@ -13,6 +24,40 @@
     </li>
      <li>
       add user:- post API-  <b>http://localhost:3000/users</b> 
+    </li>
+     <li>
+      delete user:- delete API-  <b>http://localhost:3000/users/id</b> 
+    </li>
+</ul>
+<h2>books</h2>
+<ul>
+  <li>
+      find All books:- get API-  <b>http://localhost:3000/books</b> 
+    </li>
+    <li>
+      find book:- get API-  <b>http://localhost:3000/books/id</b> 
+    </li>
+     <li>
+      add book:- post API-  <b>http://localhost:3000/books</b> 
+    </li>
+     <li>
+      delete book:- delete API-  <b>http://localhost:3000/books/id</b> 
+    </li>
+</ul>
+<h2>issue books</h2>
+<ul>
+  <li>
+      find issue book:- get API-  <b>http://localhost:3000/logs/logsid</b> 
+    </li>
+    <li>
+      issue book:- post API-  <b>-http://localhost:3000/logs/addToLog </b> 
+    </li>
+     <li>
+      update issue book:-patch API-  <b>http://localhost:3000/logs/logsid</b> 
+    </li>
+     <li>
+      delete issue book:- delete API-  <b>http://localhost:3000/logs/logsid
+</b> 
     </li>
 </ul>
 
