--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,13 +6,22 @@
 <h2>admin</h2>
 <ul>
    <li>
-      admin register:- post API-  <b>http://localhost:3000//admin/register
+      admin register:- post API-  <b>http://localhost:3000/admin/register
 </b> 
     </li>
     <li>
-      admin login:- post API-  <b>http://localhost:3000//admin/login
+      admin login:- post API-  <b>http://localhost:3000/admin/login
 </b> 
     </li>
+    <li>
+      admin find:- post API-  <b>http://localhost:3000/admin/alladmins
+</b> 
+    </li>
+     <li>
+      admin logout:- post API-  <b>http://localhost:3000/admin/logout
+</b> 
+    </li>
+
 </ul>
 <h2>Users</h2>
 <ul>
